# OpenIsle

./: .env.example  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docs.html  docs.txt  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: 新功能建议.md  错误-bug报告.md
.github/workflows/: coffee-bot.yml  deploy-docs.yml  deploy-staging.yml  deploy.yml  news-bot.yml  open_source_reply_bot.yml  reply-bots.yml
backend/: .prettierrc  open-isle.env.example  pom.xml
bots/: bot_father.ts  reply_bots.ts
bots/instance/: coffee_bot.ts  daily_news_bot.ts  open_source_reply_bot.ts  reply_bot.ts
deploy/: deploy.sh  deploy_staging.sh
docker/: .env.example  docker-compose.yaml  frontend-service-entrypoint.sh  frontend-service.Dockerfile  mcp.Dockerfile  opensearch.Dockerfile
docker/rabbitmq/: definitions.json
docs/: README.md  backend.html  backend.txt  frontend.html  frontend.txt  mdx-components.tsx  openapi.html  openapi.txt  package.json
docs/app/: layout.tsx
docs/components/: api-overview.tsx
docs/lib/: layout.shared.tsx  media-adapter.client.ts  media-adapter.ts  openapi-operations.ts  openapi.ts  source.ts
docs/openapi/: adminHello.html  adminHello.txt  admins.html  (+277 more)
frontend_nuxt/: .env.dev.example  .env.example  .env.production.example  .env.staging.example  app.vue  nuxt.config.ts  package-lock.json  package.json
mcp/: README.md  pyproject.toml
mcp/src/openisle_mcp/: __init__.py  config.py  schemas.py  search_client.py  server.py
nginx/: openisle  openisle-staging
websocket_service/: pom.xml  websocket_service.env.example
(+421 files in other folders)
